# kl2_pine

./: .gitignore  .gitmodules  CMakeLists.txt
include/: draw.h  drawable.h  klonoa_memory.h  ps2_pointer.h  ps2_stubs.h  stat.h  types.h  window.h
lib/: CMakeLists.txt
src/: main.cpp  window.cpp
src/draw/: drawable.cpp  draws.h  hato_draw.cpp  hato_draw.h  nakano_draw.cpp  nakano_draw.h  take_draw.cpp  take_draw.h
